--- a/Project_file.ipynb
+++ b/Project_file.ipynb
@@ -25,7 +25,8 @@
     "    * [Loading Data](#pt)\n",
     "    * [Combining Date Time](#dt)\n",
     "    * [Cleaning Data](#Clean)\n",
-    "    * [Data Cube](#DataCube)"
+    "    * [Data Cube](#DataCube)\n",
+    "    * [PortFoilio Optimization](#MPT)"
    ]
   },
   {
@@ -41,7 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install plotly"
+    "!pip install plotly\n",
+    "!pip install PyPortfolioOpt"
    ]
   },
   {
@@ -58,8 +60,13 @@
     "import seaborn as sns\n",
     "from scipy import stats\n",
     "import matplotlib as mpl\n",
+    "from pypfopt.cla import CLA\n",
     "from datetime import datetime\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from pypfopt import risk_models\n",
+    "from pypfopt import expected_returns\n",
+    "from matplotlib.ticker import FuncFormatter\n",
+    "from pypfopt.efficient_frontier import EfficientFrontier "
    ]
   },
   {
@@ -1163,9 +1170,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Port FOlio Optimization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1278,6 +1301,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rearranging"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -1288,11 +1318,257 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview of Markowitz Portfolio Theory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modern portfolio theory (MPT), or mean-variance analysis, is a mathematical framework for assembling a portfolio of assets such that the expected return is maximized for a given level of risk. It is a formalization and extension of diversification in investing, the idea that owning different kinds of financial assets is less risky than owning only one type. Its key insight is that an asset's risk and return should not be assessed by itself, but by how it contributes to a portfolio's overall risk and return. It uses the variance of asset prices as a proxy for risk.\n",
+    "\n",
+    "Economist Harry Markowitz introduced MPT in a 1952 essay, for which he was later awarded a Nobel Prize in Economics; see Markowitz model. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepraring Files for MPT"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dataframes=[]\n",
+    "for i in range(14):\n",
+    "    df1=df.loc[i::14]\n",
+    "    dataframes.append(df1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Names=['ATRL','bahl','EPCL','FCCL','LUCK','MCB','MLCF','NETSOL','NML',\n",
+    "      'OGDC','PPL','PSO','SEARL','TRG']\n",
+    "i=0\n",
+    "for i in range(14):\n",
+    "    dataframes[i].to_csv('../MPT Data/'+Names[i]+'.csv',index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TRADE_ENTRY_DATE</th>\n",
+       "      <th>ATRL_CLOSE</th>\n",
+       "      <th>bahl_TRADE_RATE</th>\n",
+       "      <th>EPCL_TRADE_RATE</th>\n",
+       "      <th>FCCL_TRADE_RATE</th>\n",
+       "      <th>LUCK_TRADE_RATE</th>\n",
+       "      <th>MCB_TRADE_RATE</th>\n",
+       "      <th>MLCF_TRADE_RATE</th>\n",
+       "      <th>NETSOL_TRADE_RATE</th>\n",
+       "      <th>NML_TRADE_RATE</th>\n",
+       "      <th>OGDC_TRADE_RATE</th>\n",
+       "      <th>PPL_TRADE_RATE</th>\n",
+       "      <th>PSO_TRADE_RATE</th>\n",
+       "      <th>SEARL_TRADE_RATE</th>\n",
+       "      <th>TRG_TRADE_RATE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>82.90</td>\n",
+       "      <td>26.50</td>\n",
+       "      <td>22.75</td>\n",
+       "      <td>6.70</td>\n",
+       "      <td>51.35</td>\n",
+       "      <td>144.00</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>17.40</td>\n",
+       "      <td>31.01</td>\n",
+       "      <td>73.85</td>\n",
+       "      <td>176.75</td>\n",
+       "      <td>200.80</td>\n",
+       "      <td>64.05</td>\n",
+       "      <td>1.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>83.30</td>\n",
+       "      <td>26.58</td>\n",
+       "      <td>23.00</td>\n",
+       "      <td>6.70</td>\n",
+       "      <td>51.25</td>\n",
+       "      <td>144.17</td>\n",
+       "      <td>4.98</td>\n",
+       "      <td>17.45</td>\n",
+       "      <td>31.30</td>\n",
+       "      <td>74.00</td>\n",
+       "      <td>177.00</td>\n",
+       "      <td>200.99</td>\n",
+       "      <td>64.00</td>\n",
+       "      <td>1.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>85.00</td>\n",
+       "      <td>26.90</td>\n",
+       "      <td>22.90</td>\n",
+       "      <td>6.75</td>\n",
+       "      <td>51.50</td>\n",
+       "      <td>144.49</td>\n",
+       "      <td>5.05</td>\n",
+       "      <td>17.40</td>\n",
+       "      <td>31.20</td>\n",
+       "      <td>73.70</td>\n",
+       "      <td>177.30</td>\n",
+       "      <td>201.03</td>\n",
+       "      <td>63.10</td>\n",
+       "      <td>1.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>85.40</td>\n",
+       "      <td>27.02</td>\n",
+       "      <td>23.19</td>\n",
+       "      <td>6.70</td>\n",
+       "      <td>51.85</td>\n",
+       "      <td>145.00</td>\n",
+       "      <td>5.08</td>\n",
+       "      <td>17.50</td>\n",
+       "      <td>31.05</td>\n",
+       "      <td>73.80</td>\n",
+       "      <td>177.33</td>\n",
+       "      <td>201.12</td>\n",
+       "      <td>60.80</td>\n",
+       "      <td>1.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>86.85</td>\n",
+       "      <td>28.10</td>\n",
+       "      <td>23.11</td>\n",
+       "      <td>6.74</td>\n",
+       "      <td>51.85</td>\n",
+       "      <td>145.00</td>\n",
+       "      <td>5.17</td>\n",
+       "      <td>17.26</td>\n",
+       "      <td>30.80</td>\n",
+       "      <td>73.70</td>\n",
+       "      <td>176.80</td>\n",
+       "      <td>201.45</td>\n",
+       "      <td>62.00</td>\n",
+       "      <td>1.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  TRADE_ENTRY_DATE  ATRL_CLOSE  bahl_TRADE_RATE  EPCL_TRADE_RATE  \\\n",
+       "0       2009-04-01       82.90            26.50            22.75   \n",
+       "1       2009-04-01       83.30            26.58            23.00   \n",
+       "2       2009-04-01       85.00            26.90            22.90   \n",
+       "3       2009-04-01       85.40            27.02            23.19   \n",
+       "4       2009-04-01       86.85            28.10            23.11   \n",
+       "\n",
+       "   FCCL_TRADE_RATE  LUCK_TRADE_RATE  MCB_TRADE_RATE  MLCF_TRADE_RATE  \\\n",
+       "0             6.70            51.35          144.00             5.00   \n",
+       "1             6.70            51.25          144.17             4.98   \n",
+       "2             6.75            51.50          144.49             5.05   \n",
+       "3             6.70            51.85          145.00             5.08   \n",
+       "4             6.74            51.85          145.00             5.17   \n",
+       "\n",
+       "   NETSOL_TRADE_RATE  NML_TRADE_RATE  OGDC_TRADE_RATE  PPL_TRADE_RATE  \\\n",
+       "0              17.40           31.01            73.85          176.75   \n",
+       "1              17.45           31.30            74.00          177.00   \n",
+       "2              17.40           31.20            73.70          177.30   \n",
+       "3              17.50           31.05            73.80          177.33   \n",
+       "4              17.26           30.80            73.70          176.80   \n",
+       "\n",
+       "   PSO_TRADE_RATE  SEARL_TRADE_RATE  TRG_TRADE_RATE  \n",
+       "0          200.80             64.05            1.37  \n",
+       "1          200.99             64.00            1.40  \n",
+       "2          201.03             63.10            1.38  \n",
+       "3          201.12             60.80            1.31  \n",
+       "4          201.45             62.00            1.40  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=pd.read_csv('../MPT Data/ATRL.csv')\n",
+    "df.drop(['ID','OPEN','HIGH','LOW','DATE_Time','DATE_TIME.1'],axis=1,inplace=True)\n",
+    "df.columns=['TRADE_ENTRY_DATE','ATRL_CLOSE']\n",
+    "\n",
+    "Names=['bahl','EPCL','FCCL','LUCK','MCB','MLCF','NETSOL','NML',\n",
+    "      'OGDC','PPL','PSO','SEARL','TRG']\n",
+    "\n",
+    "for i in range(len(Names)):\n",
+    "    df1=pd.read_csv('../MPT Data/'+Names[i]+'.csv')\n",
+    "    df1.drop(['TRADE_ENTRY_DATE','ID','OPEN','HIGH','LOW','DATE_Time','DATE_TIME.1'],axis=1,inplace=True)\n",
+    "    df1.columns=[Names[i]+'_TRADE_RATE']\n",
+    "    df=pd.concat([df,df1],axis=1)\n",
+    "df.drop('TRADE_ENTRY_DATE',axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saving File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('../MPT Data/Combined.csv')"
+   ]
   }
  ],
  "metadata": {
@@ -1329,7 +1605,7 @@
     "width": "165px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
