--- a/Project_file.ipynb
+++ b/Project_file.ipynb
@@ -26,7 +26,9 @@
     "    * [Combining Date Time](#dt)\n",
     "    * [Cleaning Data](#Clean)\n",
     "    * [Data Cube](#DataCube)\n",
-    "    * [PortFoilio Optimization](#MPT)"
+    "    * [PortFoilio Optimization](#MPT)\n",
+    "    * [Markowitz Model](#Mark)\n",
+    "    * [Automated Trading](#Frame)"
    ]
   },
   {
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +60,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import tensorflow as tf\n",
     "from scipy import stats\n",
     "import matplotlib as mpl\n",
     "from pypfopt.cla import CLA\n",
@@ -70,6 +73,7 @@
     "from pypfopt import discrete_allocation\n",
     "from pypfopt import objective_functions\n",
     "from matplotlib.ticker import FuncFormatter\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "from pypfopt.efficient_frontier import EfficientFrontier "
    ]
   },
@@ -1504,7 +1508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Port FOlio Optimization"
+    "# Port FOlio Optimization <a name='MPT'></a>"
    ]
   },
   {
@@ -1912,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2072,7 +2076,7 @@
        "4             62.00            1.40  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2092,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -2108,7 +2112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Markowitz Model"
+    "# Markowitz Model <a name='Mark'></a>"
    ]
   },
   {
@@ -2398,7 +2402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Automated trading"
+    "# Automated trading <a name='Frame'></a>"
    ]
   },
   {
@@ -2461,7 +2465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19518,7 +19522,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train test split"
+    "## Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train test split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         26.50\n",
+       "1         26.58\n",
+       "2         26.90\n",
+       "3         27.02\n",
+       "4         28.10\n",
+       "          ...  \n",
+       "399996    84.50\n",
+       "399997    84.50\n",
+       "399998    84.50\n",
+       "399999    84.50\n",
+       "400000    84.50\n",
+       "Name: bahl, Length: 400001, dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data=[]\n",
+    "test_data=[]\n",
+    "for share in shares1:\n",
+    "    train_data.append(df.loc[:400000,share])\n",
+    "    test_data.append(df.loc[400000:,share])\n",
+    "train_data[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normalizing Data\n",
+    "Now you need to define a scaler to normalize the data. MinMaxScalar scales all the data to be in the region of 0 and 1. You can also reshape the training and test data to be in the shape [data_size, num_features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = MinMaxScaler()\n",
+    "for i in range(len(shares1)):\n",
+    "    train_data[i] = train_data[i].values.reshape(-1,1)\n",
+    "    test_data[i] = test_data[i].values.reshape(-1,1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Due to the observation we made earlier, that is, different time periods of data have different value ranges, you normalize the data by splitting the full series into windows. If you don't do this, the earlier data will be close to 0 and will not add much value to the learning process. Here you choose a window size of 25000.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-ef29338fe2fb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0msmoothing_window_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m25000\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mdi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m400000\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msmoothing_window_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mscaler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mdi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0msmoothing_window_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mtrain_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mdi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0msmoothing_window_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mscaler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mdi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0msmoothing_window_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the Scaler with training data and smooth data\n",
+    "smoothing_window_size = 25000\n",
+    "for di in range(0,400000,smoothing_window_size):\n",
+    "    scaler.fit(train_data[di:di+smoothing_window_size,:])\n",
+    "    train_data[di:di+smoothing_window_size,:] = scaler.transform(train_data[di:di+smoothing_window_size,:])\n",
+    "\n",
+    "# You normalize the last bit of remaining data\n",
+    "scaler.fit(train_data[di+smoothing_window_size:,:])\n",
+    "train_data[di+smoothing_window_size:,:] = scaler.transform(train_data[di+smoothing_window_size:,:])"
    ]
   },
   {
@@ -19526,10 +19629,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "train_data = df[:400000]\n",
-    "test_data = df[400000:]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -19566,7 +19666,7 @@
     "width": "334.233px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
