--- a/Assaignment£3.ipynb
+++ b/Assaignment£3.ipynb
@@ -3633,7 +3633,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3677,20 +3679,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "for i in range(14):\n",
     "    List=[]\n",
     "    List.append(mape(yhat_for_all_models[i],y_test_comb[i]))\n",
     "    MAPE[MAP[i]]=List\n",
-    "df_MAPE=pd.DataFrame(MAPE)\n"
+    "df_MAPE=pd.DataFrame(MAPE)\n",
+    "df_MAPE.to_csv('MAPE.csv')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Putting Model in Trading Framework"
+   ]
   },
   {
    "cell_type": "code",
@@ -3698,6 +3700,321 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>214.642029</td>\n",
+       "      <td>84.500397</td>\n",
+       "      <td>33.630356</td>\n",
+       "      <td>17.507677</td>\n",
+       "      <td>442.986328</td>\n",
+       "      <td>187.670898</td>\n",
+       "      <td>31.50979</td>\n",
+       "      <td>76.900787</td>\n",
+       "      <td>168.380676</td>\n",
+       "      <td>178.574905</td>\n",
+       "      <td>114.264664</td>\n",
+       "      <td>355.441254</td>\n",
+       "      <td>210.007874</td>\n",
+       "      <td>42.569389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>214.823959</td>\n",
+       "      <td>84.500397</td>\n",
+       "      <td>33.630356</td>\n",
+       "      <td>17.507677</td>\n",
+       "      <td>443.152527</td>\n",
+       "      <td>187.583374</td>\n",
+       "      <td>31.50979</td>\n",
+       "      <td>76.900787</td>\n",
+       "      <td>168.345428</td>\n",
+       "      <td>178.597610</td>\n",
+       "      <td>114.267494</td>\n",
+       "      <td>355.517883</td>\n",
+       "      <td>210.007874</td>\n",
+       "      <td>42.420624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>214.625107</td>\n",
+       "      <td>84.500397</td>\n",
+       "      <td>33.630356</td>\n",
+       "      <td>17.507677</td>\n",
+       "      <td>442.524475</td>\n",
+       "      <td>187.519211</td>\n",
+       "      <td>31.50979</td>\n",
+       "      <td>76.900787</td>\n",
+       "      <td>168.252106</td>\n",
+       "      <td>178.596573</td>\n",
+       "      <td>114.304619</td>\n",
+       "      <td>355.537781</td>\n",
+       "      <td>210.007874</td>\n",
+       "      <td>42.353878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>214.978348</td>\n",
+       "      <td>84.500397</td>\n",
+       "      <td>33.630356</td>\n",
+       "      <td>17.507677</td>\n",
+       "      <td>442.334900</td>\n",
+       "      <td>187.508179</td>\n",
+       "      <td>31.50979</td>\n",
+       "      <td>76.900787</td>\n",
+       "      <td>167.905991</td>\n",
+       "      <td>178.599899</td>\n",
+       "      <td>114.379982</td>\n",
+       "      <td>355.753235</td>\n",
+       "      <td>210.007874</td>\n",
+       "      <td>42.348030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>215.056732</td>\n",
+       "      <td>84.500397</td>\n",
+       "      <td>33.630356</td>\n",
+       "      <td>17.507677</td>\n",
+       "      <td>442.359711</td>\n",
+       "      <td>187.507431</td>\n",
+       "      <td>31.50979</td>\n",
+       "      <td>76.900787</td>\n",
+       "      <td>168.016739</td>\n",
+       "      <td>178.845871</td>\n",
+       "      <td>114.389366</td>\n",
+       "      <td>355.979828</td>\n",
+       "      <td>210.007874</td>\n",
+       "      <td>42.328754</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99936</th>\n",
+       "      <td>368.681671</td>\n",
+       "      <td>84.500397</td>\n",
+       "      <td>33.630356</td>\n",
+       "      <td>17.507677</td>\n",
+       "      <td>400.109039</td>\n",
+       "      <td>189.229401</td>\n",
+       "      <td>31.50979</td>\n",
+       "      <td>76.900787</td>\n",
+       "      <td>126.546799</td>\n",
+       "      <td>145.979904</td>\n",
+       "      <td>176.305267</td>\n",
+       "      <td>478.539398</td>\n",
+       "      <td>210.007874</td>\n",
+       "      <td>35.086452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99937</th>\n",
+       "      <td>368.380188</td>\n",
+       "      <td>84.500397</td>\n",
+       "      <td>33.630356</td>\n",
+       "      <td>17.507677</td>\n",
+       "      <td>400.109039</td>\n",
+       "      <td>189.229401</td>\n",
+       "      <td>31.50979</td>\n",
+       "      <td>76.900787</td>\n",
+       "      <td>126.546799</td>\n",
+       "      <td>145.979904</td>\n",
+       "      <td>176.305267</td>\n",
+       "      <td>478.575470</td>\n",
+       "      <td>210.007874</td>\n",
+       "      <td>35.087753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99938</th>\n",
+       "      <td>368.286804</td>\n",
+       "      <td>84.500397</td>\n",
+       "      <td>33.630356</td>\n",
+       "      <td>17.507677</td>\n",
+       "      <td>400.109039</td>\n",
+       "      <td>189.229401</td>\n",
+       "      <td>31.50979</td>\n",
+       "      <td>76.900787</td>\n",
+       "      <td>126.546799</td>\n",
+       "      <td>145.979904</td>\n",
+       "      <td>176.305267</td>\n",
+       "      <td>478.612488</td>\n",
+       "      <td>210.007874</td>\n",
+       "      <td>35.087685</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99939</th>\n",
+       "      <td>368.123657</td>\n",
+       "      <td>84.500397</td>\n",
+       "      <td>33.630356</td>\n",
+       "      <td>17.507677</td>\n",
+       "      <td>400.109039</td>\n",
+       "      <td>189.229401</td>\n",
+       "      <td>31.50979</td>\n",
+       "      <td>76.900787</td>\n",
+       "      <td>126.546799</td>\n",
+       "      <td>145.979904</td>\n",
+       "      <td>176.305267</td>\n",
+       "      <td>478.741150</td>\n",
+       "      <td>210.007874</td>\n",
+       "      <td>35.087456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99940</th>\n",
+       "      <td>367.902222</td>\n",
+       "      <td>84.500397</td>\n",
+       "      <td>33.630356</td>\n",
+       "      <td>17.507677</td>\n",
+       "      <td>400.109039</td>\n",
+       "      <td>189.229401</td>\n",
+       "      <td>31.50979</td>\n",
+       "      <td>76.900787</td>\n",
+       "      <td>126.546799</td>\n",
+       "      <td>145.979904</td>\n",
+       "      <td>176.305267</td>\n",
+       "      <td>478.385437</td>\n",
+       "      <td>210.007874</td>\n",
+       "      <td>35.104019</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>99941 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                0          0          0          0           0           0  \\\n",
+       "0      214.642029  84.500397  33.630356  17.507677  442.986328  187.670898   \n",
+       "1      214.823959  84.500397  33.630356  17.507677  443.152527  187.583374   \n",
+       "2      214.625107  84.500397  33.630356  17.507677  442.524475  187.519211   \n",
+       "3      214.978348  84.500397  33.630356  17.507677  442.334900  187.508179   \n",
+       "4      215.056732  84.500397  33.630356  17.507677  442.359711  187.507431   \n",
+       "...           ...        ...        ...        ...         ...         ...   \n",
+       "99936  368.681671  84.500397  33.630356  17.507677  400.109039  189.229401   \n",
+       "99937  368.380188  84.500397  33.630356  17.507677  400.109039  189.229401   \n",
+       "99938  368.286804  84.500397  33.630356  17.507677  400.109039  189.229401   \n",
+       "99939  368.123657  84.500397  33.630356  17.507677  400.109039  189.229401   \n",
+       "99940  367.902222  84.500397  33.630356  17.507677  400.109039  189.229401   \n",
+       "\n",
+       "              0          0           0           0           0           0  \\\n",
+       "0      31.50979  76.900787  168.380676  178.574905  114.264664  355.441254   \n",
+       "1      31.50979  76.900787  168.345428  178.597610  114.267494  355.517883   \n",
+       "2      31.50979  76.900787  168.252106  178.596573  114.304619  355.537781   \n",
+       "3      31.50979  76.900787  167.905991  178.599899  114.379982  355.753235   \n",
+       "4      31.50979  76.900787  168.016739  178.845871  114.389366  355.979828   \n",
+       "...         ...        ...         ...         ...         ...         ...   \n",
+       "99936  31.50979  76.900787  126.546799  145.979904  176.305267  478.539398   \n",
+       "99937  31.50979  76.900787  126.546799  145.979904  176.305267  478.575470   \n",
+       "99938  31.50979  76.900787  126.546799  145.979904  176.305267  478.612488   \n",
+       "99939  31.50979  76.900787  126.546799  145.979904  176.305267  478.741150   \n",
+       "99940  31.50979  76.900787  126.546799  145.979904  176.305267  478.385437   \n",
+       "\n",
+       "                0          0  \n",
+       "0      210.007874  42.569389  \n",
+       "1      210.007874  42.420624  \n",
+       "2      210.007874  42.353878  \n",
+       "3      210.007874  42.348030  \n",
+       "4      210.007874  42.328754  \n",
+       "...           ...        ...  \n",
+       "99936  210.007874  35.086452  \n",
+       "99937  210.007874  35.087753  \n",
+       "99938  210.007874  35.087685  \n",
+       "99939  210.007874  35.087456  \n",
+       "99940  210.007874  35.104019  \n",
+       "\n",
+       "[99941 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1=pd.DataFrame(yhat_for_all_models[0])\n",
+    "for i in range(1,14):\n",
+    "    df2=pd.DataFrame(yhat_for_all_models[i])\n",
+    "    df1=pd.concat([df1,df2],axis=1)\n",
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TN=[100000]\n",
+    "df2=df\n",
+    "for i in range(df2.shape[0]//lm-1):\n",
+    "    df1=df2[i*lm:(i*lm)+lm]\n",
+    "    for share in shares1:\n",
+    "        Min[share]=df1[share].idxmin()\n",
+    "        Max[share]=df1[share].idxmax()\n",
+    "    for share in shares1:\n",
+    "        if Min[share]!=Max[share]:\n",
+    "           X,shares1[share]=trader(X,shares1[share],df2.loc[Min[share],share],df2.loc[Max[share],share])\n",
+    "           tpf+=(df2.loc[(i*lm)+lm,share]*shares1[share])\n",
+    "           TN.append(X+tpf)\n",
+    "           print(X,tpf)\n",
+    "    tpf=0"
+   ]
   }
  ],
  "metadata": {
